Stream permissions (#8063)
## Rationale
Migrate `SecurityManager.getPermissions()` (which returned a `Set`) to
new method `streamPermissions()` (which returns a `Stream`). Using a
stream avoids creating, immediately discarding, and later garbage
collecting a potentially large set on every permission check. This also
allows short-circuiting in `hasPermissions()` and other common code
paths.

Also, require that contextual role sets are `@NotNull` for consistency.